--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -18,7 +18,7 @@ build:
     - detect_faces.py = bob.ip.facedetect.script.detect_faces:main
     - evaluate_detections.py = bob.ip.facedetect.script.evaluate:main
     - plot_froc.py = bob.ip.facedetect.script.plot_froc:main
-  number: 0
+  number: 1
   skip: true  # [not linux]
   script: python -B setup.py install --single-version-externally-managed --record record.txt
 
@@ -31,6 +31,7 @@ requirements:
     - bob.ip.draw
     - bob.ip.color
     - bob.io.image
+    - boost 1.60.*
 
   run:
     - python
@@ -39,6 +40,7 @@ requirements:
     - bob.ip.draw
     - bob.ip.color
     - bob.io.image
+    - boost 1.60.*
 
 test:
   commands:
